--- a/Integrations/ESPHome/MTR-1.yaml
+++ b/Integrations/ESPHome/MTR-1.yaml
@@ -1,7 +1,7 @@
 #Define Project
 substitutions:
   name: apollo-mtr-1
-  version: "24.4.23.1"
+  version: "24.4.25.1"
   device_description: ${name} made by Apollo Automation - version ${version}.
 
 esphome:
@@ -103,7 +103,6 @@ api:
             id: scd40
 
 logger:
-  level: WARN
 
 ota:
 
@@ -436,94 +435,98 @@ text_sensor:
 
 
 script:
-  - id: testScript
+  - id: testScript      
     then:
-      - lambda: "id(testCycleCount) = 0;"
-      - while:
-          condition:
-            - lambda: "return id(testCycleCount) < 5;"
-          then:
-            - if:
-                condition:
-                  - lambda: "return id(dps310Passed) == false;"
-                then:
-                  - if:
-                      condition:
-                        - lambda: "return id(dps310pressure).state > 0;"
-                      then:
-                        - lambda: "id(dps310Passed) = true;"
-            - if:
-                condition:
-                  - lambda: "return id(ltr390lightPassed) == false;"
-                then:
-                  - if:
-                      condition:
-                        - lambda: "return id(ltr390light).state > 10;"
-                      then:
-                        - lambda: "id(ltr390lightPassed) = true;"
-            - if:
-                condition:
-                  - lambda: "return id(ltr390uvindexPassed) == false;"
-                then:
-                  - if:
-                      condition:
-                        - lambda: "return !isnan(id(ltr390uvindex).state);"
-                      then:
-                        - lambda: "id(ltr390uvindexPassed) = true;"
-            - if:
-                condition:
-                  - lambda: "return id(ld2450Passed) == false;"
-                then:
-                  - if:
-                      condition:
-                        - lambda: "return id(presence_target_count).state > 0;"
-                      then:
-                        - lambda: "id(ld2450Passed) = true;"
-            - if:
-                condition:
-                  - lambda: "return id(dps310Passed) && id(ltr390lightPassed) && id(ltr390uvindexPassed) && id(ld2450Passed);"
-                then:
-                  - lambda: "id(testCycleCount) = 10;"
-                  - lambda: "id(runTest) = false;"
-            - delay: 1s
-            - lambda: "id(testCycleCount) += 1;"
-      
-      #Check If Test Passed To Trigger Lights
-      - if:
-          condition:
-            - lambda: "return id(dps310Passed) && id(ltr390lightPassed) && id(ltr390uvindexPassed) && id(ld2450Passed);"
-          then:
-            - light.turn_on:
-                id: rgb_light
-                red: 0%
-                green: 100%
-                blue: 0%
-            - delay: 10s
-            - light.turn_on:
-                id: rgb_light
-                red: 0%
-                green: 0%
-                blue: 0%
-            - light.turn_off:
-                id: rgb_light
-            - lambda: "id(connectionCycleCount) = 1;"
-            - lambda: "id(connectionCheck).execute();"
-          else:
-            - light.turn_on:
-                id: rgb_light
-                red: 100%
-                green: 0%
-                blue: 0%
-            - delay: 10s
-            - light.turn_on:
-                id: rgb_light
-                red: 0%
-                green: 0%
-                blue: 0%
-            - light.turn_off:
-                id: rgb_light
-            - lambda: "id(connectionCycleCount) = 1;"
-            - lambda: "id(connectionCheck).execute();"
+      if: 
+        condition:
+          - lambda: "return id(runTest);"
+        then:
+          - lambda: "id(testCycleCount) = 0;"
+          - while:
+              condition:
+                - lambda: "return id(testCycleCount) < 5;"
+              then:
+                - if:
+                    condition:
+                      - lambda: "return id(dps310Passed) == false;"
+                    then:
+                      - if:
+                          condition:
+                            - lambda: "return id(dps310pressure).state > 0;"
+                          then:
+                            - lambda: "id(dps310Passed) = true;"
+                - if:
+                    condition:
+                      - lambda: "return id(ltr390lightPassed) == false;"
+                    then:
+                      - if:
+                          condition:
+                            - lambda: "return id(ltr390light).state > 10;"
+                          then:
+                            - lambda: "id(ltr390lightPassed) = true;"
+                - if:
+                    condition:
+                      - lambda: "return id(ltr390uvindexPassed) == false;"
+                    then:
+                      - if:
+                          condition:
+                            - lambda: "return !isnan(id(ltr390uvindex).state);"
+                          then:
+                            - lambda: "id(ltr390uvindexPassed) = true;"
+                - if:
+                    condition:
+                      - lambda: "return id(ld2450Passed) == false;"
+                    then:
+                      - if:
+                          condition:
+                            - lambda: "return id(presence_target_count).state > 0;"
+                          then:
+                            - lambda: "id(ld2450Passed) = true;"
+                - if:
+                    condition:
+                      - lambda: "return id(dps310Passed) && id(ltr390lightPassed) && id(ltr390uvindexPassed) && id(ld2450Passed);"
+                    then:
+                      - lambda: "id(testCycleCount) = 10;"
+                - lambda: "id(runTest) = false;"
+                - delay: 1s
+                - lambda: "id(testCycleCount) += 1;"
+          
+          #Check If Test Passed To Trigger Lights
+          - if:
+              condition:
+                - lambda: "return id(dps310Passed) && id(ltr390lightPassed) && id(ltr390uvindexPassed) && id(ld2450Passed);"
+              then:
+                - light.turn_on:
+                    id: rgb_light
+                    red: 0%
+                    green: 100%
+                    blue: 0%
+                - delay: 10s
+                - light.turn_on:
+                    id: rgb_light
+                    red: 0%
+                    green: 0%
+                    blue: 0%
+                - light.turn_off:
+                    id: rgb_light
+                - lambda: "id(connectionCycleCount) = 1;"
+                - lambda: "id(connectionCheck).execute();"
+              else:
+                - light.turn_on:
+                    id: rgb_light
+                    red: 100%
+                    green: 0%
+                    blue: 0%
+                - delay: 10s
+                - light.turn_on:
+                    id: rgb_light
+                    red: 0%
+                    green: 0%
+                    blue: 0%
+                - light.turn_off:
+                    id: rgb_light
+                - lambda: "id(connectionCycleCount) = 1;"
+                - lambda: "id(connectionCheck).execute();"
 
   - id: connectionCheck
     then:
@@ -547,8 +550,7 @@ script:
                   - switch.is_on: startup_light_blink
 
                 then:
-                  - light.turn_off:
-                      id: rgb_light
+                  - light.turn_off: rgb_light
                   - lambda: "id(connectionCycleCount) += 1;"
             - delay: 1s
       
