--- a/Integrations/ESPHome/MTR-1.yaml
+++ b/Integrations/ESPHome/MTR-1.yaml
@@ -1,7 +1,7 @@
 #Define Project
 substitutions:
   name: apollo-mtr-1
-  version: "24.4.26.1"
+  version: "24.5.6.1"
   device_description: ${name} made by Apollo Automation - version ${version}.
 
 esphome:
@@ -25,8 +25,6 @@ esphome:
             - lambda: "return id(runTest);"
           then:
             - lambda: "id(testScript).execute();"
-          else:
-            - lambda: "id(connectionCheck).execute();"  
   
 
 # Define Board
@@ -44,10 +42,6 @@ external_components:
     components: [ ld2450 ]
 
 globals:
-  - id: connectionCycleCount
-    type: int
-    restore_value: no
-    initial_value: "0"
   - id: button_press_timestamp
     restore_value: no
     type: uint32_t
@@ -80,11 +74,6 @@ globals:
 # Enable Home Assistant API
 # Also Add Buzzer Service Connection
 api:
-  on_client_connected:
-    - delay: 1s
-    - lambda: "id(connectionCycleCount) = 35;"
-    - delay: 1s
-    - light.turn_off: rgb_light
   services:
     - service: play_buzzer
       variables:
@@ -364,8 +353,8 @@ light:
     effects:
       - pulse:
           name: "Slow Pulse"
-          transition_length: 250ms
-          update_interval: 250ms
+          transition_length: 1000ms
+          update_interval: 1000ms
           min_brightness: 50%
           max_brightness: 100%
       - pulse:
@@ -441,8 +430,9 @@ script:
     then:
       if: 
         condition:
-          - lambda: "return id(runTest);"
+          - lambda: "return id(runTest) == true;"
         then:
+          - lambda: "id(runTest) = false;"
           - lambda: "id(testCycleCount) = 0;"
           - while:
               condition:
@@ -498,12 +488,13 @@ script:
               condition:
                 - lambda: "return id(dps310Passed) && id(ltr390lightPassed) && id(ltr390uvindexPassed) && id(ld2450Passed);"
               then:
+                - lambda: "id(runTest) = false;"
                 - light.turn_on:
                     id: rgb_light
                     red: 0%
                     green: 100%
                     blue: 0%
-                - delay: 10s
+                - delay: 5s
                 - light.turn_on:
                     id: rgb_light
                     red: 0%
@@ -511,15 +502,15 @@ script:
                     blue: 0%
                 - light.turn_off:
                     id: rgb_light
-                - lambda: "id(connectionCycleCount) = 1;"
-                - lambda: "id(connectionCheck).execute();"
+                
               else:
+                - lambda: "id(runTest) = false;"
                 - light.turn_on:
                     id: rgb_light
                     red: 100%
                     green: 0%
                     blue: 0%
-                - delay: 10s
+                - delay: 5s
                 - light.turn_on:
                     id: rgb_light
                     red: 0%
@@ -527,32 +518,5 @@ script:
                     blue: 0%
                 - light.turn_off:
                     id: rgb_light
-                - lambda: "id(connectionCycleCount) = 1;"
-                - lambda: "id(connectionCheck).execute();"
 
-  - id: connectionCheck
-    then:
-      - while:
-          condition:
-            - lambda: "return id(connectionCycleCount) < 32;"
-          then:
-            - if:
-                condition:
-                  - binary_sensor.is_off: ink_ha_connected
-                  - lambda: "return id(connectionCycleCount) < 30;"
-                  - switch.is_on: startup_light_blink
-
-                then:
-                  - light.toggle: rgb_light
-                  - lambda: "id(connectionCycleCount) += 1;"
-
-            - if:
-                condition:
-                  - lambda: "return id(connectionCycleCount) > 30;"
-                  - switch.is_on: startup_light_blink
-
-                then:
-                  - light.turn_off: rgb_light
-                  - lambda: "id(connectionCycleCount) += 1;"
-            - delay: 1s
       
