--- a/Integrations/ESPHome/MTR-1_Factory.yaml
+++ b/Integrations/ESPHome/MTR-1_Factory.yaml
@@ -24,15 +24,39 @@ dashboard_import:
   package_import_url: github://ApolloAutomation/MTR-1/Integrations/ESPHome/MTR-1_Factory.yaml
   import_full_config: false
 
+improv_serial:
+
+esp32_improv:
+  authorizer: none
+
+wifi:
+  on_connect:
+    - delay: 5s  
+    - ble.disable:
+  on_disconnect:
+    - ble.enable:
+  ap:
+    ssid: "Apollo MTR1 Hotspot"
+
+logger:
+
 ota:
   - platform: esphome
     id: ota_esphome
+  - platform: http_request
+    id: ota_managed
+
+http_request:
+  verify_ssl: true
+
+update:
+  - platform: http_request
+    id: firmware_update
+    name: Firmware Update
+    source: https://apolloautomation.github.io/MTR-1/artifact/manifest.json
 
 
-wifi:
-  power_save_mode: none
-  ap:
-    ssid: "Apollo MTR1 Hotspot"
+safe_mode:
 
 external_components:
   - source:
