--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         file:
           - Integrations/ESPHome/MTR-1.yaml
           - Integrations/ESPHome/MTR-1_BLE.yaml
+          - Integrations/ESPHome/MTR-1_Factory.yaml
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4.1.7
