--- a/Integrations/ESPHome/MTR-1_Factory.yaml
+++ b/Integrations/ESPHome/MTR-1_Factory.yaml
@@ -54,7 +54,7 @@ external_components:
 packages:
   remote_package:
     url: https://github.com/ApolloAutomation/MTR-1/
-    ref: SplitYAML
+    ref: main
     files:
       - Integrations/ESPHome/Core.yaml
     refresh: 0d
