--- a/Integrations/ESPHome/Core.yaml
+++ b/Integrations/ESPHome/Core.yaml
@@ -8,28 +8,6 @@ esp32:
   framework:
     type: esp-idf
 
-captive_portal:
-
-web_server:
-  port: 80
-
-api:
-  services:
-    - service: play_buzzer
-      variables:
-        song_str: string
-      then:
-        - rtttl.play:
-            rtttl: !lambda "return song_str;"
-
-    #Co2 Calibration Service
-    - service: calibrate_co2_value
-      variables:
-        co2_ppm: float
-      then:
-        - scd4x.perform_forced_calibration:
-            value: !lambda "return co2_ppm;"
-            id: scd40
 
 external_components:
   - source:
@@ -176,9 +154,6 @@ rtttl:
   output: buzzer
 
 binary_sensor:
-  - platform: status
-    name: Online
-    id: ink_ha_connected
 
   - platform: gpio
     pin:
@@ -216,11 +191,6 @@ sensor:
     id: sys_uptime
     update_interval: 60s
 
-  - platform: wifi_signal
-    name: RSSI
-    id: wifi_signal_db
-    update_interval: 60s
-    entity_category: "diagnostic"
 
   - platform: scd4x
     id: scd40
@@ -516,3 +486,31 @@ script:
                     blue: 0%
                 - light.turn_off:
                     id: rgb_light
+
+
+interval:
+  - interval: 4s
+    then:
+      - light.turn_on:
+          id: rgb_light
+          red: 0%
+          green: 100%
+          blue: 0%
+      - delay: 1s
+      - light.turn_on:
+          id: rgb_light
+          red: 100%
+          green: 0%
+          blue: 0%
+      - delay: 1s
+      - light.turn_on:
+          id: rgb_light
+          red: 0%
+          green: 0%
+          blue: 100%
+      - delay: 1s
+
+  - interval: 20s
+    then:
+      - rtttl.play:
+          rtttl: "starwars:d=4,o=5,b=180:8f,8f,8f,2a#.,2f.6,8d#6,8d6,8c6,2a#.6,f.6,8d#6,8d6,8c6,2a#.6,f.6,8d#6,8d6,8d#6,2c6,p,8f,8f,8f,2a#.,2f.6,8d#6,8d6,8c6,2a#.6,f.6,8d#6,8d6,8c6,2a#.6,f.6,8d#6,8d6,8d#6,2c6"
