--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ jobs:
           - Integrations/ESPHome/MTR-1.yaml
           - Integrations/ESPHome/MTR-1_BLE.yaml
           - Integrations/ESPHome/MTR-1_Factory.yaml
+        esphome-version:
+          - stable
+          - beta
+          - dev
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4.1.7
