--- a/Integrations/ESPHome/Core.yaml
+++ b/Integrations/ESPHome/Core.yaml
@@ -7,11 +7,10 @@ esp32:
   board: esp32-c3-devkitm-1
   framework:
     type: esp-idf
+    version: 4.4.8
+    platform_version: 5.4.0
 
 captive_portal:
-
-web_server:
-  port: 80
 
 api:
   services:
