--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,30 +23,6 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4.1.7
       - name: Build ESPHome firmware to verify configuration
-        uses: esphome/build-action@v3.1.0
+        uses: esphome/build-action@v6
         with:
-          yaml_file: ${{ matrix.file }}
-
-  notify-on-failure:
-    name: Notify on Failure
-    runs-on: ubuntu-latest
-    needs: ci  # wait
-    if: ${{ failure() }}   # only run if build-and-test failed
-    steps:
-      - name: Send Email
-        uses: dawidd6/action-send-mail@v3
-        with:
-          # mail server settings
-          server_address: smtp-mail.outlook.com
-          server_port: 587
-          # user credentials
-          username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          # email subject
-          subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-          # email body as text
-          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
-          # comma-separated string, send email to
-          to: admin@apolloautomation.com
-          # from email name
-          from: XYZ
+          yaml-file: ${{ matrix.file }}
