--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,142 +1,191 @@
-name: Build
+name: Publish
 env:
   DEVICE_NAME: mtr-1
-  RELEASE_URL: ${{ github.server_url }}/${{ github.repository }}/releases/latest
 
 on:
   push:
     branches:
       - main
+  # Uncomment if needed:
+  # workflow_dispatch:
+  #   inputs:
+  #     version:
+  #       description: 'The version of the firmware to build'
+  #       required: true
+  # release:
+  #   types: [published]
 
 jobs:
-  build:
-    name: Build And Release
+  check-for-yaml:
+    name: Check for YAML Changes
     runs-on: ubuntu-latest
+    outputs:
+      yaml_changed: ${{ steps.check.outputs.yaml_changed }}
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set uppercase DEVICE_NAME
-        run: |
-          echo "UPPERCASE_DEVICE_NAME=$(echo $DEVICE_NAME | tr '[:lower:]' '[:upper:]')" >> $GITHUB_ENV
-
-      - name: Build Firmware
-        uses: esphome/build-action@v3.0.0
-        id: esphome-build
+      - name: Checkout code
+        uses: actions/checkout@v3
         with:
-          yaml_file: Integrations/ESPHome/${{ env.UPPERCASE_DEVICE_NAME }}.yaml
-          version: 'latest'
-          cache: true
+          fetch-depth: 2  # So we can diff the previous commit
+
+      - name: Find .yaml Changes in Last PR Merge
+        id: check
+        run: |
+          BASE_COMMIT=$(git rev-parse HEAD^1)
+          MERGE_COMMIT=$(git rev-parse HEAD)
+
+          if git diff --name-only $BASE_COMMIT $MERGE_COMMIT | grep -q '\.yaml$'; then
+            echo "yaml_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "yaml_changed=false" >> $GITHUB_OUTPUT
+          fi
+
+  set-version:
+    name: Set Version
+    runs-on: ubuntu-latest
+    needs: [check-for-yaml]
+    if: needs.check-for-yaml.outputs.yaml_changed == 'true'
+
+    # Expose job-level outputs so other jobs can access them
+    outputs:
+      version: ${{ steps.read_version.outputs.version }}
+      upload_url: ${{ steps.run-release-drafter.outputs.upload_url }}
+      body: ${{ steps.run-release-drafter.outputs.body }}
+      html_url: ${{ steps.run-release-drafter.outputs.html_url }}
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+      pull-requests: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Read version from YAML file
         id: read_version
         run: |
-          version=$(awk '/substitutions:/ {found=1} found && /version:/ {print $2; exit}' Integrations/ESPHome/${{ env.UPPERCASE_DEVICE_NAME }}.yaml | tr -d '"')
-          echo "project_version=$version" >> $GITHUB_ENV
-      
-      - name: Move generated files to output
+          version=$(awk '/substitutions:/ {found=1} found && /version:/ {print $2; exit}' Integrations/ESPHome/Core.yaml | tr -d '"')
+          echo "version=$version" >> $GITHUB_OUTPUT
+          echo "Detected version: $version"
+
+      - name: Fetch Last Merged PR Body
+        id: last_pr
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mkdir -p output
-          mv ${{ steps.esphome-build.outputs.name }}/* output/
-          echo ${{ steps.esphome-build.outputs.version }} > output/version
-          # Extract MD5 checksum of firmware.ota.bin
-          MD5_CHECKSUM=$(jq -r '.ota.md5' output/manifest.json)
-          echo "MD5_CHECKSUM=$MD5_CHECKSUM" >> $GITHUB_ENV
+          PR_INFO=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&sort=updated&direction=desc&per_page=1")
+          PR_BODY=$(echo "$PR_INFO" | jq -r '.[0].body')
+          echo "$PR_BODY" > pr_body.txt
 
-          # Create new manifest.json with jq
-          jq -n --arg name "${{ env.DEVICE_NAME }}" \
-                 --arg version "${{ env.project_version }}" \
-                 --arg md5 "$MD5_CHECKSUM" \
-                 '{name: $name, version: $version, home_assistant_domain: "esphome", new_install_prompt_erase: false, builds: [{chipFamily: "ESP32-C3", parts: [{path: "apollo-${{ env.DEVICE_NAME }}-esp32c3.factory.bin", offset: 0}], ota: {path: "apollo-${{ env.DEVICE_NAME }}-esp32c3.ota.bin", md5: $md5}}]}' > output/manifest.json
-
-
-      - uses: actions/upload-artifact@v4.3.3
+      - name: 🚀 Run Release Drafter
+        id: run-release-drafter
+        uses: release-drafter/release-drafter@v6
         with:
-          path: output/
-          retention-days: 1
-
-      - name: Collect merge commits
-        id: collect_commits
-        run: |
-          MERGE_COMMITS=$(git log --merges --pretty=format:"%h %s" $(git describe --tags --abbrev=0 @^)..@)
-          echo "MERGE_COMMITS=$MERGE_COMMITS" >> $GITHUB_ENV
-
-      - name: Create Release
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        id: create_release
-        uses: actions/create-release@v1
+          version: ${{ steps.read_version.outputs.version }}
+          publish: true
+          tag: ${{ steps.read_version.outputs.version }}
+          name: Release ${{ steps.read_version.outputs.version }}
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-        with:
-          tag_name: ${{ env.project_version }}
-          release_name: "Release ${{ env.project_version }}"
-          body: Release of version ${{ env.project_version }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          draft: false
-          prerelease: false
-  
-      - name: Upload firmware.factory.bin to Release
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: output/apollo-${{ env.DEVICE_NAME }}-esp32c3.factory.bin
-          asset_name: apollo-${{ env.DEVICE_NAME }}-esp32c3.factory.bin
-          asset_content_type: application/octet-stream
+  build-firmware:
+    name: Build And Release (Firmware)
+    uses: esphome/workflows/.github/workflows/build.yml@main
+    needs:
+      - check-for-yaml
+      - set-version
+    if: needs.check-for-yaml.outputs.yaml_changed == 'true'
+    with:
+      files: |
+        Integrations/ESPHome/MTR-1_Factory.yaml
+      esphome-version: stable
+      combined-name: firmware
+      release-summary: ${{ needs.set-version.outputs.body }}
+      release-version: ${{ needs.set-version.outputs.version }}
 
-      - name: Upload firmware.ota.bin to Release
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: output/apollo-${{ env.DEVICE_NAME }}-esp32c3.ota.bin
-          asset_name: apollo-${{ env.DEVICE_NAME }}-esp32c3.ota.bin
-          asset_content_type: application/octet-stream
-      - name: Upload firmware.ota.bin to Release
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: output/manifest.json
-          asset_name: manifest.json
-          asset_content_type: application/octet-stream
-
-
-  prep:
-    name: Consolidate firmwares
+  build-site:
+    name: Build Site
     runs-on: ubuntu-latest
     needs:
-      - build
+      - check-for-yaml
+      - build-firmware
+      - set-version
+    if: needs.check-for-yaml.outputs.yaml_changed == 'true'
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4.1.7
+      - name: Checkout source code
+        uses: actions/checkout@v4
+
+      - name: Build
+        uses: actions/jekyll-build-pages@v1.0.13
         with:
+          source: ./static
+          destination: ./output
+
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: site
           path: output
-      - run: cp -R static/* output/
-      - uses: actions/upload-pages-artifact@v3.0.1
+
+  publish:
+    name: Publish to GitHub Pages
+    runs-on: ubuntu-latest
+    needs:
+      - build-site
+      - build-firmware
+      - set-version
+    if: needs.check-for-yaml.outputs.yaml_changed == 'true' && ${{ github.run_attempt == 1 }}
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # 1) Download Firmware
+      - uses: actions/download-artifact@v4
+        with:
+          name: firmware
+          path: firmware
+
+      # 3) Zip them up
+      - name: Zip firmware
+        run: |
+          zip -r firmware.zip firmware
+
+      # 4) Upload firmware.zip as an asset
+      - name: Upload firmware.zip
+        id: upload-firmware
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          # Use the job-level output from set-version:
+          upload_url: ${{ needs.set-version.outputs.upload_url }}
+          asset_path: firmware.zip
+          asset_name: firmware.zip
+          asset_content_type: application/zip
+
+      - name: Copy firmware and manifest
+        run: |-
+          mkdir -p output/firmware
+          cp -r firmware/${{ needs.build-firmware.outputs.version }}/* output/firmware/
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: site
+          path: output
+
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: output
           retention-days: 1
 
-  deploy:
-    if: contains(fromJSON('["workflow_dispatch", "push", "schedule"]'), github.event_name) && github.ref == 'refs/heads/main'
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: prep
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4.0.5
+        uses: actions/deploy-pages@v4
