Add support for LD2450 to use the set presence timeout
Currently the yaml has a bug where the timeout for presence is ignored because we have lines in the yaml missing.

We will likely need to add this to the r-pro-1 yaml as well since it also uses the LD2450.

More info from keith at ESPHome here: https://github.com/esphome/issues/issues/7006#issuecomment-2998616097

--- a/Integrations/ESPHome/Core.yaml
+++ b/Integrations/ESPHome/Core.yaml
@@ -166,6 +166,18 @@ rtttl:
   output: buzzer
 
 binary_sensor:
+  - platform: ld2450
+    ld2450_id: ld2450_radar
+    has_target:
+      id: has_target_bs
+      name: Presence
+    has_moving_target:
+      id: has_moving_target_bs
+      name: Moving Target
+    has_still_target:
+      id: has_still_target_bs
+      name: Still Target
+
   - platform: status
     name: Online
     id: ink_ha_connected
