add logger to ble fork

--- a/Integrations/ESPHome/MTR-1_BLE.yaml
+++ b/Integrations/ESPHome/MTR-1_BLE.yaml
@@ -19,7 +19,9 @@ esphome:
             - lambda: "return id(runTest);"
           then:
             - lambda: "id(testScript).execute();"
-  
+
+logger:
+
 dashboard_import:
   package_import_url: github://ApolloAutomation/MTR-1/Integrations/ESPHome/MTR-1_BLE.yaml
   import_full_config: false
