--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       device-name: mtr-1
       yaml-files: |
         Integrations/ESPHome/MTR-1_Factory.yaml
-      firmware-names: "_Factory:firmware"
+      firmware-names: "1_Factory:firmware"
       core-yaml-path: Integrations/ESPHome/Core.yaml
       esphome-version: stable
       # Bypass check if manually triggered with bypass option
