Add logger to base MTR-1.yaml
Resolves the error:

```
ERROR Logger is not configured!
```

This then matches the base file of the products e.g. the AIR-1.yaml

--- a/Integrations/ESPHome/MTR-1.yaml
+++ b/Integrations/ESPHome/MTR-1.yaml
@@ -20,6 +20,8 @@ esphome:
           then:
             - lambda: "id(testScript).execute();"
   
+logger:
+
 dashboard_import:
   package_import_url: github://ApolloAutomation/MTR-1/Integrations/ESPHome/MTR-1.yaml
   import_full_config: false
